# PingPong

./: CMakeLists.txt  README.md
shaders/: combine_shaders.py  s_fragment.glsl  s_vertex.glsl  shaders.h
src/: CMakeLists.txt  main.cpp
src/pong/: app.cpp  app.h  collision.cpp  collision.h  config.cpp  config.h  events.cpp  events.h  figures.cpp  figures.h  game.cpp  game.h  player.cpp  player.h  renderer.cpp  renderer.h  window.cpp  window.h
src/pong/utils/: exceptions.cpp  exceptions.h  log.cpp  log.h  math.h
src/utils/: log.cpp  log.h
